[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/Card3D.gd" id="1_card3d"]

[sub_resource type="BoxMesh" id="BoxMesh_u8v2q"]
size = Vector3(1, 1.5, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_card"]
albedo_color = Color(0.8, 0.8, 0.8, 1)
metallic = 0.2
roughness = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_card"]
size = Vector3(1, 1.5, 0.05)

[node name="Card3D" type="CharacterBody3D"]
collision_layer = 1
collision_mask = 0
script = ExtResource("1_card3d")

[node name="CardMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_u8v2q")
surface_material_override/0 = SubResource("StandardMaterial3D_card")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_card")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.026)
pixel_size = 0.002
billboard = 1
texture_filter = 0

[node name="Stats" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.03)

[node name="NameLabel" type="Label3D" parent="Stats"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
pixel_size = 0.003
text = "Card Name"

[node name="AttackLabel" type="Label3D" parent="Stats"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -0.6, 0)
pixel_size = 0.003
text = "⚔️ 0"

[node name="HealthLabel" type="Label3D" parent="Stats"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.6, 0)
pixel_size = 0.003
text = "❤️ 0" 